--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">我的第一个应用</string>
-    <string name="Helloworld">Helloworld</string>
+    <string name="tv_one">你好Android</string>
 
 </resources>
